@@ -1,3 +1,7 @@
+2001-10-31  Zbigniew Chyla  <cyba@gnome.pl>
+
+	* gconf/gconf-internals.c (gconf_activate_server): Plug leak.
+
 2001-10-30  Frederic Crozat  <fcrozat@mandrakesoft.com>
 
 	* backends/val-encode.c: add missing headers to remove
